WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278417
[IFC][Invalidation] Layout level styleWillChange should disable partial layout
https://bugs.webkit.org/show_bug.cgi?id=278417
Summary
[IFC][Invalidation] Layout level styleWillChange should disable partial layout
alan
Reported
2024-08-20 14:22:13 PDT
ssia
Attachments
[fast-cq]Patch
(9.85 KB, patch)
2024-08-20 14:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-20 14:26:13 PDT
Created
attachment 472251
[details]
[fast-cq]Patch
EWS
Comment 2
2024-08-21 05:19:40 PDT
Committed
282557@main
(11579490c7d0): <
https://commits.webkit.org/282557@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472251
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-08-21 05:21:18 PDT
<
rdar://problem/134411704
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug