[IFC][Invalidation] Layout level styleWillChange should disable partial layout https://bugs.webkit.org/show_bug.cgi?id=278417

Reviewed by Antti Koivisto.

IFC does not yet support partial invalidation on layout type of style change. This patch ensures that whenever we see such change
the inline damage gets reset to "full layout".

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::rootStyleWillChange):
(WebCore::Layout::InlineInvalidation::styleWillChange):
(WebCore::Layout::InlineInvalidation::setFullLayoutIfNeeded):
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::styleWillChange):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderButton.cpp:
(WebCore::RenderButton::setInnerRenderer):
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::styleWillChange):
* Source/WebCore/rendering/RenderMenuList.cpp:
(WebCore::if):

Canonical link: https://commits.webkit.org/282557@main