Source/WebCore/rendering/RenderButton.cpp
@@ -80,7 +80,7 @@ void RenderButton::setInnerRenderer(RenderBlock& innerRenderer)
         if (auto* inlineFormattingContextRoot = dynamicDowncast<RenderBlockFlow>(*m_inner); inlineFormattingContextRoot && inlineFormattingContextRoot->modernLineLayout())
             inlineFormattingContextRoot->modernLineLayout()->rootStyleWillChange(*inlineFormattingContextRoot, inlineFormattingContextRoot->style());
         if (auto* lineLayout = LayoutIntegration::LineLayout::containing(*m_inner))
-            lineLayout->styleWillChange(*m_inner, m_inner->style());
+            lineLayout->styleWillChange(*m_inner, m_inner->style(), StyleDifference::Layout);
         LayoutIntegration::LineLayout::updateStyle(*m_inner);
         for (auto& child : childrenOfType<RenderText>(*m_inner))
             LayoutIntegration::LineLayout::updateStyle(child);
